fix style on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,22 @@ body {
     .p-progressbar-label {
         font-size: 0.6rem;
         position: absolute !important;
-        left: '50%' !important;
+        left: 50% !important;
+    }
+    .p-tree{
+        border: unset !important;
+        padding: unset !important;
+        background: unset !important;
+        color: unset !important;
+    }
+    .p-tree .p-tree-container .p-treenode {
+        padding: 0rem !important;
+    }
+    .p-tree .p-tree-container .p-treenode .p-treenode-content {
+        padding: 0.5rem 0 0.5rem 0 !important;
+    }
+    .p-component{
+        font-size: 0.8rem !important;
     }
 }
 
